--- a/client/src/components/layout/Layout.module.css
+++ b/client/src/components/layout/Layout.module.css
@@ -1,4 +1,15 @@
 .layout {
   height: 100%;
   background-color: var(--background-color);
+  display: flex;
+}
+
+.main {
+  width: 100%;
+  margin: 20px 27px 0 50px;
+}
+
+.main h1 {
+  font-size: 30px;
+  font-weight: 500;
 }
