--- a/client/src/components/layout/NavPane.module.css
+++ b/client/src/components/layout/NavPane.module.css
@@ -1,14 +1,15 @@
 .navpane {
-  width: 300px;
+  width: 290px;
   height: 100vh;
-  padding: 20px 18px 20px 27px;
+  padding: 20px 17px 20px 17px;
   background-color: var(--neutral);
   font-size: 14px;
   overflow: auto;
+  flex-shrink: 0;
 }
 
 .list {
-  width: 95%;
+  width: 100%;
   margin-top: 18px;
   display: flex;
   flex-direction: column;
