--- a/client/src/pages/Dashboard.module.css
+++ b/client/src/pages/Dashboard.module.css
@@ -6,10 +6,10 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 20px;
 }
 
 .row {
   display: flex;
-
   gap: 20px;
 }
