--- a/client/src/components/dashboard/GroupedComplianceBreakdown.module.css
+++ b/client/src/components/dashboard/GroupedComplianceBreakdown.module.css
@@ -1,12 +1,13 @@
 .card {
-  width: 707px;
+  width: 100%;
+  height: 100%;
   padding: 23px 10px 23px 19px;
   display: flex;
 }
 
 .titleCard {
   width: 149px;
-  height: 234px;
+  height: 100%;
   padding: 16px 20px;
   background: var(--background-color);
   border-radius: 15px;
@@ -40,7 +41,7 @@
 
 .complianceCards {
   width: 100%;
-  padding: 0 10px;
+  padding: 0 5px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -92,8 +93,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 125px;
+  width: 100%;
   height: 22px;
+  max-width: 120px;
   font-size: 10px;
   text-align: center;
   line-height: 1.3;
