--- a/client/src/components/layout/NavPane.module.css
+++ b/client/src/components/layout/NavPane.module.css
@@ -2,11 +2,11 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 290px;
+  width: 280px;
   height: 100vh;
   padding: 20px 17px 20px 17px;
   background-color: var(--neutral);
-  font-size: 14px;
+  font-size: 13px;
   overflow: auto;
   flex-shrink: 0;
 }
@@ -21,14 +21,13 @@
   margin-top: 18px;
   display: flex;
   flex-direction: column;
-  gap: 1px;
 }
 
 .navlink {
   width: 100%;
-  height: 42px;
+  height: 40px;
   padding: 14px 15px;
-  border-radius: 15px;
+  border-radius: 9px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -37,11 +36,10 @@
 .active {
   background-color: var(--light);
   font-weight: 500;
-  border-radius: 15px;
 }
 
 .navlink:hover {
-  background-color: var(--light);
+  background-color: var(--background-color);
 }
 
 .navlink p {
