--- a/client/src/components/layout/Layout.module.css
+++ b/client/src/components/layout/Layout.module.css
@@ -5,7 +5,10 @@
 
 .main {
   width: 100%;
-  margin: 20px 27px 28px 325px;
+  margin: 20px 27px 28px 315px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
 }
 
 .main h1 {
@@ -13,4 +16,61 @@
   font-weight: 500;
   letter-spacing: 1.28px;
   margin-bottom: 30px;
+}
+
+.contentContainer {
+  display: flex;
+  flex-grow: 1;
+  overflow: hidden;
+}
+
+.content {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 1rem;
+}
+
+.toggleButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 15px;
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.paneOverlay {
+  background-color: transparent !important;
+  pointer-events: none;
+}
+
+.slidingPane {
+  max-width: 414px;
+  min-width: 278px;
+  position: relative;
+  background: var(--light);
+  margin-top: 20px;
+  margin-right: 23px;
+  border-radius: 15px;
+  box-shadow: none;
+  /* padding: 20px 0 20px 7px; this is extra padding, bcs theres already some padding with react sliding pane */
+  font-size: 13px;
+  pointer-events: all;
+  overflow: hidden;
+}
+
+.slidingPane h1 {
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 1.28px;
+  margin-bottom: 30px;
+}
+
+.slidingPane h2 {
+  font-size: 15px;
+  font-weight: 600;
+  letter-spacing: 0.72px;
 }
