--- a/client/src/components/layout/infoPanes/CalendarInfoPane.module.css
+++ b/client/src/components/layout/infoPanes/CalendarInfoPane.module.css
@@ -18,7 +18,8 @@
   margin: 0 -32px 0 -32px; /* 32px is default react-sliding-pane padding */
 }
 
-.snapshotsSection h2 {
+.snapshotsSection h2,
+.snapshotsSection p {
   /* margin-left: 50px; also this */
   margin-left: 32px; /* deafault padding as well */
 }
