--- a/client/src/components/layout/NavPane.module.css
+++ b/client/src/components/layout/NavPane.module.css
@@ -7,8 +7,10 @@
   padding: 20px 17px 20px 17px;
   background-color: var(--neutral);
   font-size: 13px;
-  overflow: auto;
+  overflow: hidden;
   flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .navpane img {
@@ -21,6 +23,8 @@
   margin-top: 18px;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
 .navlink {
@@ -81,4 +85,14 @@ li ul {
   font-size: 11px;
   font-weight: 700;
   color: var(--primary);
+}
+
+.bottomLinks {
+  width: 100%;
+  margin-top: auto;
+  padding-top: 7px;
+  border-top: 1px solid var(--primary);
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
 }
