--- a/client/src/components/homepage/AboutUs.module.css
+++ b/client/src/components/homepage/AboutUs.module.css
@@ -1,6 +1,15 @@
+.aboutusContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .aboutus {
   width: 100%;
   height: 100vh;
+  padding: 0 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,10 +25,71 @@
 }
 
 .desc {
-  width: 900px;
   margin: 56px 0 0 0;
 }
 
 .desc b {
   color: var(--primary);
+}
+
+.teamContainer {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 35px;
+}
+
+.memberCard {
+  position: relative;
+  padding: 15px;
+  width: 220px;
+  text-align: center;
+  background-color: var(--background-color);
+  border-radius: 15px;
+  border: 1px solid var(--background-color);
+  overflow: hidden;
+  transition: 0.3s;
+}
+
+.memberCard:hover {
+  border: 1px solid var(--primary);
+}
+
+.memberCard:hover .memberName {
+  color: var(--primary);
+}
+
+.memberName {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  z-index: 10;
+  transition: 0.2s;
+}
+
+.iconContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  z-index: 10;
+  transform: scale(0.8);
+}
+
+.icon {
+  font-size: 24px;
+}
+
+.icon path {
+  transition: 0.2s;
+}
+
+.icon:hover path {
+  fill: var(--primary) !important;
+}
+
+.icon:nth-of-type(2):hover path {
+  fill: none !important;
+  stroke: var(--primary) !important;
 }
