--- a/client/src/components/homepage/ContactUs.module.css
+++ b/client/src/components/homepage/ContactUs.module.css
@@ -1,6 +1,12 @@
-.contactUs {
+.contactUsContainer {
   width: 100%;
   height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contactUs {
   display: flex;
   flex-direction: column;
   align-items: center;
