--- a/client/src/components/homepage/Services.module.css
+++ b/client/src/components/homepage/Services.module.css
@@ -1,18 +1,21 @@
-.services {
+.servicesContainer {
   width: 100%;
   height: 100vh;
+  min-height: 694px;
+  max-height: 985px;
   background: var(--gradient-h);
   display: flex;
+  align-items: flex-start;
   justify-content: center;
-  gap: 70px;
-  z-index: 0;
 }
 
-.services::after {
+.servicesContainer::after {
   content: '';
   position: absolute;
   width: 100%;
   height: 100vh;
+  min-height: 694px;
+  max-height: 990px;
   background: linear-gradient(
     transparent 60%,
     rgba(255, 255, 255, 0.07) 66%,
@@ -24,12 +27,18 @@
   z-index: 1;
 }
 
+.services {
+  padding: 30px 50px 0 50px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 2;
+}
+
 .desc {
   color: var(--light);
-  width: 350px;
-  margin-top: 116px;
+  width: 32%;
+  margin-top: 65px;
   font-weight: 300;
-  z-index: 2;
 }
 
 .desc h1 {
@@ -42,16 +51,28 @@
   margin-top: 22px;
 }
 
-.cards {
+/* .cards {
   width: 115vh;
   margin-top: 56px;
   display: flex;
   flex-wrap: wrap;
   gap: 5vh;
   z-index: 2;
+} */
+
+.cards {
+  width: 65%;
+  height: 85vh;
+  /* min-width: 680px; */
+  min-height: 640px;
+  max-height: 675px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 25px;
 }
 
-.service {
+/* .service {
   width: 48vh;
   height: 48vh;
   border-radius: 4%;
@@ -63,6 +84,21 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+} */
+
+.service {
+  background-color: var(--light);
+  border-radius: 15px;
+  padding: 0 34px;
+  text-align: center;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  transition: 0.2s;
+  flex-grow: 1;
 }
 
 .iconContainer {
