--- a/client/src/index.css
+++ b/client/src/index.css
@@ -138,7 +138,7 @@ html {
 body {
   font-family: var(--font-family);
   font-size: var(--font-size-base);
-  background-color: var(--background-color);
+  background-color: var(--light);
   color: var(--dark);
   line-height: 1.6;
   overflow-x: hidden;
