--- a/client/src/components/homepage/AboutUs.module.css
+++ b/client/src/components/homepage/AboutUs.module.css
@@ -17,7 +17,7 @@
 }
 
 .aboutus h2 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 800;
   background: var(--gradient-h);
   -webkit-background-clip: text;
@@ -85,11 +85,30 @@
   transition: 0.2s;
 }
 
-.icon:hover path {
+.icon:hover path,
+.icon:active path {
   fill: var(--primary) !important;
 }
 
-.icon:nth-of-type(2):hover path {
+.icon:nth-of-type(2):hover path,
+.icon:nth-of-type(2):active path {
   fill: none !important;
   stroke: var(--primary) !important;
+}
+
+@media (max-width: 940px) {
+  .aboutusContainer,
+  .aboutus {
+    height: fit-content;
+  }
+
+  .aboutus {
+    padding: 30px 70px 0 70px;
+  }
+}
+
+@media (max-width: 520px) {
+  .aboutus {
+    padding: 30px 35px 0 35px;
+  }
 }
