--- a/client/src/components/incidentTrends/AlertMetrics.module.css
+++ b/client/src/components/incidentTrends/AlertMetrics.module.css
@@ -23,7 +23,7 @@
   font-size: 13px;
 }
 
-.dropdown:focus {
+.dropdown:active {
   outline: none;
   border-color: var(--primary);
   box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
