--- a/client/src/pages/LoginRegister.module.css
+++ b/client/src/pages/LoginRegister.module.css
@@ -123,7 +123,7 @@
   outline: none;
   font-size: 0.7rem;
   padding: 0.5rem 2.5rem 0.5rem 0.5rem;
-  background-color: var(--neutral);
+  background: none;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
