--- a/client/src/components/dashboard/ActiveCameras.module.css
+++ b/client/src/components/dashboard/ActiveCameras.module.css
@@ -16,3 +16,18 @@
   display: flex;
   justify-content: center;
 }
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile {
+  width: 36%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile h2 {
+  text-align: center;
+}
