--- a/client/src/components/dashboard/ComplianceBreakdown.module.css
+++ b/client/src/components/dashboard/ComplianceBreakdown.module.css
@@ -1,7 +1,136 @@
 .breakdown {
   width: 100%;
+  height: 350px;
   min-width: 630px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile {
+  min-width: 100%;
+  height: 545px;
+}
+
+.avgs {
+  display: flex;
+  gap: 13px;
+}
+
+.titleCard {
+  width: 100%;
+  height: 100%;
+  padding: 16px 0;
+  background: var(--light);
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.titleCard h2 {
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.titleCard div {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.titleCard div .percentage {
+  position: absolute;
+  margin-top: 19px;
+}
+
+.titleCard p {
+  font-size: 10px;
+  font-weight: 600;
+  color: var(--primary);
+  text-align: center;
+}
+
+/* Options styling */
+.options {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.option {
+  cursor: pointer;
+  padding: 6px 20px;
+  font-size: 13px;
+  font-weight: 400;
+  background-color: var(--neutral);
+  border-radius: 20px;
+  transition:
+    background-color 0.2s,
+    color 0.2s;
+}
+
+.option.active {
+  color: var(--light);
+  background-color: var(--primary);
+}
+
+/* Data list styling */
+.dataList {
+  padding: 10px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.listItem {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  padding: 10px;
+  /* background-color: var(--background-color); */
+  border-radius: 8px;
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
+  background-color: var(--dark);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.topRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.complianceType {
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.topRow .percentage {
+  color: var(--primary);
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.bottomRow {
+  width: 100%;
 }
