--- a/client/src/components/dashboard/RecentIncidents.module.css
+++ b/client/src/components/dashboard/RecentIncidents.module.css
@@ -67,3 +67,69 @@
 .incident .desc .severity {
   font-size: 9px;
 }
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile.card {
+  width: 100%;
+  height: 84px;
+  padding: 10px 5px 9px 10px;
+  gap: 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.mobile h2 {
+  text-align: center;
+}
+
+.mobile .incidents {
+  justify-content: space-between;
+  height: fit-content;
+  flex-grow: 0;
+}
+
+.mobile .incident {
+  width: auto;
+  justify-content: space-around;
+  gap: 0;
+}
+
+.mobile .incidentContainer {
+  width: fit-content;
+  padding: 0 5px 0 20px;
+  display: flex;
+}
+
+.mobile .incident .desc {
+  width: 100%;
+  height: auto;
+  max-width: 211px !important;
+  padding: 7px 4px;
+  margin-left: 14px;
+  align-items: center;
+}
+
+.mobile .desc .name {
+  font-size: 10px;
+  text-align: center;
+}
+
+.mobile .desc .severity {
+  font-size: 8px;
+}
+
+@media (max-width: 380px) {
+  .mobile .incident .desc {
+    height: 53px;
+  }
+}
+
+@media (max-width: 340px) {
+  .mobile .incidentContainer {
+    width: fit-content;
+    padding: 0 5px 0 8px;
+    display: flex;
+  }
+}
