--- a/client/src/components/layout/PWALayout.module.css
+++ b/client/src/components/layout/PWALayout.module.css
@@ -21,16 +21,30 @@
 }
 
 .main h1 {
-  font-size: 23px;
+  font-size: 24px;
   font-weight: 500;
   letter-spacing: 1.28px;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
+}
+
+.backButton {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.backButton svg {
+  width: 14px;
+  height: 28px;
+  transform: scaleX(-1);
 }
 
 .content {
   flex-grow: 1;
-  overflow-y: auto;
-  transition: 0.3s;
+  overflow-y: hidden;
+  transition: 0.2s;
 }
 
 .footer {
