--- a/client/src/pages/Dashboard.module.css
+++ b/client/src/pages/Dashboard.module.css
@@ -6,13 +6,13 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
 }
 
 .row {
   width: 100%;
   display: flex;
-  gap: 20px;
+  gap: 15px;
   align-items: stretch;
 }
 
@@ -21,5 +21,50 @@ main {
   max-width: 570px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
+}
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile main {
+  gap: 15px;
+}
+
+.mobile .row {
+  flex-direction: column;
+}
+
+.mobile .column {
+  width: 100%;
+  min-width: 100%;
+  /* height: 84px;
+  flex-direction: row;
+  gap: 0;
+  justify-content: space-between;
+  order: 1; */
+}
+
+.mobile .column .row {
+  height: 100%;
+  height: 84px;
+  flex-direction: row;
+  gap: 0;
+  justify-content: space-between;
+  order: 2;
+}
+
+.mobile .recentIncidents {
+  order: 1;
+}
+
+.mobile .activeCameras {
+  order: 3;
+}
+
+.mobile .sessionDuration {
+  order: 2;
+}
+
+.mobile .complianceBreakdown {
+  order: 2;
 }
