mobile styling across calendar and sessions pages

--- a/client/src/components/Duration.module.css
+++ b/client/src/components/Duration.module.css
@@ -81,3 +81,13 @@
   font-weight: 700;
   font-size: 25px;
 }
+
+.mobile .hours,
+.mobile .minutes,
+.mobile .seconds {
+  font-size: 13px;
+}
+
+.mobile.small .number {
+  font-size: 15px;
+}
