--- a/client/src/components/PaneInfoPiece.module.css
+++ b/client/src/components/PaneInfoPiece.module.css
@@ -17,3 +17,13 @@
   align-items: center;
   gap: 4px;
 }
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile.infoPiece .infoName {
+  font-size: 14px;
+}
+
+.mobile.infoPiece .infoValue {
+  font-size: 15px;
+}
