--- a/client/src/components/layout/PWALayout.module.css
+++ b/client/src/components/layout/PWALayout.module.css
@@ -6,10 +6,19 @@
   position: relative;
 }
 
-.navPaneOverlay {
+.defaultOverlay {
+  background-color: transparent !important;
+  overflow: auto;
+}
+
+.paneOverlay {
   width: 100vw;
   height: 100vh;
-  background-color: #000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0; /* Ensure the overlay is above other content */
+  pointer-events: none; /* Allow clicks to pass through when opacity is 0 */
 }
 
 .main {
@@ -22,7 +31,7 @@
 
 .main h1 {
   font-size: 24px;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 1.28px;
   margin-bottom: 20px;
 }
@@ -99,13 +108,13 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 20;
+  z-index: 10;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  transition: 0.3s ease; /* Add transition for opacity */
-  opacity: 0; /* Initially hidden */
-  pointer-events: none; /* Prevent interaction when hidden */
+  transition: 0.3s ease;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .navPaneOverlay.active {
@@ -124,4 +133,56 @@
 
 .open {
   transform: translateX(100%);
+}
+
+.slidingPane {
+  height: fit-content;
+  position: relative;
+  background: var(--light);
+  padding: 0 0 35px 0;
+  margin-top: 65px;
+  border-radius: 52px 52px 0 0;
+  box-shadow: none !important;
+  font-size: 13px;
+  pointer-events: all;
+}
+
+.infoClose.slidingPane {
+  display: none;
+}
+
+.slidingPane > div {
+  overflow-y: visible;
+  overflow-x: hidden;
+}
+
+.slidingPane h1 {
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 1.28px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.slidingPane h2 {
+  font-size: 17px;
+  font-weight: 600;
+  letter-spacing: 0.72px;
+}
+
+.infoPaneBackButton {
+  position: fixed;
+  top: -55px;
+  left: 14px;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.infoPaneBackButton svg {
+  width: 14px;
+  height: 28px;
+  z-index: 50;
+  transform: scaleX(-1);
 }
