--- a/client/src/components/dashboard/ActiveCameras.module.css
+++ b/client/src/components/dashboard/ActiveCameras.module.css
@@ -21,7 +21,8 @@
 
 .mobile {
   width: 36%;
-  height: 100%;
+  height: 84px;
+  min-height: 84px;
   display: flex;
   flex-direction: column;
   justify-content: center;
