--- a/client/src/components/dashboard/RecentIncidents.module.css
+++ b/client/src/components/dashboard/RecentIncidents.module.css
@@ -73,6 +73,7 @@
 .mobile.card {
   width: 100%;
   height: 84px;
+  min-height: 84px;
   padding: 10px 5px 9px 10px;
   gap: 2px;
   display: flex;
@@ -104,7 +105,8 @@
 
 .mobile .incident .desc {
   width: 100%;
-  height: auto;
+  height: 53px;
+  min-height: 53px;
   max-width: 211px !important;
   padding: 7px 4px;
   margin-left: 14px;
@@ -120,11 +122,11 @@
   font-size: 8px;
 }
 
-@media (max-width: 380px) {
+/* @media (max-width: 380px) {
   .mobile .incident .desc {
     height: 53px;
   }
-}
+} */
 
 @media (max-width: 340px) {
   .mobile .incidentContainer {
