--- a/client/src/components/dashboard/SafetyScoreCard.module.css
+++ b/client/src/components/dashboard/SafetyScoreCard.module.css
@@ -50,12 +50,16 @@
   padding: 0;
 }
 
+.mobile h2 {
+  font-size: 13px;
+}
+
 .mobile .content {
   flex-direction: column;
 }
 
 .mobile .content h2 {
-  margin-top: 11px;
+  margin-top: 13px;
 }
 
 .mobile .breakdown {
