--- a/client/src/components/dashboard/SessionDuration.module.css
+++ b/client/src/components/dashboard/SessionDuration.module.css
@@ -18,7 +18,8 @@
 
 .mobile {
   width: 59%;
-  height: 100%;
+  height: 84px;
+  min-height: 84px;
   display: flex;
   flex-direction: column;
   justify-content: center;
