--- a/client/src/components/dashboard/RecentIncidents.module.css
+++ b/client/src/components/dashboard/RecentIncidents.module.css
@@ -72,8 +72,8 @@
 
 .mobile.card {
   width: 100%;
-  height: 84px;
-  min-height: 84px;
+  /* height: 84px; */
+  /* min-height: 84px; */
   padding: 10px 5px 9px 10px;
   gap: 2px;
   display: flex;
@@ -104,10 +104,10 @@
 }
 
 .mobile .incident .desc {
-  width: 100%;
+  /* width: 100%; */
   height: 53px;
   min-height: 53px;
-  max-width: 211px !important;
+  /* max-width: 211px !important; */
   padding: 7px 4px;
   margin-left: 14px;
   align-items: center;
@@ -128,7 +128,7 @@
   }
 } */
 
-@media (max-width: 340px) {
+@media (max-width: 360px) {
   .mobile .incidentContainer {
     width: fit-content;
     padding: 0 5px 0 8px;
