--- a/client/src/components/dashboard/SafetyScoreTrends.module.css
+++ b/client/src/components/dashboard/SafetyScoreTrends.module.css
@@ -138,7 +138,8 @@
 }
 
 .mobile .growthContainer > p {
-  font-size: 10px;
+  font-size: 9px;
+  white-space: nowrap;
 }
 
 @media (min-width: 500px) {
