--- a/client/src/components/dashboard/SessionDuration.module.css
+++ b/client/src/components/dashboard/SessionDuration.module.css
@@ -18,8 +18,8 @@
 
 .mobile {
   width: 59%;
-  min-height: 84px;
-  padding: 14px 12px 9px 12px;
+  /* min-height: 84px; */
+  padding: 16px 12px 11px 12px;
   display: flex;
   flex-direction: column;
   justify-content: center;
