--- a/client/src/pages/Dashboard.module.css
+++ b/client/src/pages/Dashboard.module.css
@@ -45,8 +45,8 @@ main {
 }
 
 .mobile .column .row {
-  height: 100%;
-  height: 84px;
+  /* height: 100%; */
+  /* height: 84px; */
   flex-direction: row;
   gap: 0;
   justify-content: space-between;
