--- a/client/src/components/dashboard/RecentIncidents.module.css
+++ b/client/src/components/dashboard/RecentIncidents.module.css
@@ -104,11 +104,10 @@
 }
 
 .mobile .incident .desc {
-  /* width: 100%; */
-  /* height: 53px; */
+  height: 53px;
   min-height: 59px;
   /* max-width: 211px !important; */
-  padding: 10px 4px;
+  padding: 10px 2px;
   margin-left: 14px;
   align-items: center;
 }
