--- a/client/src/components/incidentTrends/AlertMetrics.module.css
+++ b/client/src/components/incidentTrends/AlertMetrics.module.css
@@ -93,7 +93,7 @@
   color: #c09000;
 }
 
-.metricValue.constructionSite {
+.constructionSite .metricValue {
   width: 170px;
   font-size: 15px;
   line-height: 22px;
@@ -104,4 +104,58 @@
   font-weight: 500;
   text-align: center;
   line-height: 17px;
+}
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile {
+  gap: 13px;
+  padding: 8px 12px 7px;
+}
+
+.mobile .header {
+  flex-direction: column;
+  gap: 10px;
+}
+
+.mobile .header .options {
+  justify-content: start;
+  flex-wrap: wrap;
+  gap: 3px;
+}
+
+.mobile .header .timeOption {
+  padding: 4px 8px;
+}
+
+.mobile .content {
+  width: 100%;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.mobile .row {
+  width: 100%;
+  display: flex;
+  gap: 8px;
+}
+
+.mobile .metric {
+  gap: 3px;
+}
+
+.mobile .metric.constructionSite {
+  width: 175%;
+}
+
+.mobile .metricValue {
+  width: 100%;
+  max-height: 55px;
+  padding: 15px 10px;
+  font-size: 25px;
+  line-height: normal;
+}
+
+.mobile .constructionSite .metricValue {
+  font-size: 15px;
 }
