--- a/client/src/components/incidentTrends/KeyInsights.module.css
+++ b/client/src/components/incidentTrends/KeyInsights.module.css
@@ -10,3 +10,10 @@
   font-size: 14px;
   font-weight: 500;
 }
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile {
+  width: 100%;
+  padding: 15px 19px;
+}
