--- a/client/src/components/layout/PWALayout.module.css
+++ b/client/src/components/layout/PWALayout.module.css
@@ -6,27 +6,17 @@
   position: relative;
 }
 
-.defaultOverlay {
-  background-color: transparent !important;
-  overflow: auto;
-}
-
-.paneOverlay {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 0; /* Ensure the overlay is above other content */
-  pointer-events: none; /* Allow clicks to pass through when opacity is 0 */
-}
-
 .main {
   margin: 10px 10px 60px 10px;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
   overflow-x: hidden;
+}
+
+.main.mainInfoOpen {
+  pointer-events: none;
+  overflow: hidden;
 }
 
 .main h1 {
@@ -42,6 +32,22 @@
   align-items: center;
   padding: 10px;
   margin-bottom: 10px;
+  z-index: 8;
+  transition: 0.3s;
+}
+
+.backButton.fixedBackButton {
+  position: fixed;
+}
+
+.backButton.fixedBackButton path {
+  stroke: var(--light);
+}
+
+.backButton.infoBackButton {
+  position: fixed;
+  /* top: 20px;
+  left: 20px; */
 }
 
 .backButton svg {
@@ -71,6 +77,7 @@
   align-items: center;
   z-index: 21;
   transition: 0.3s ease;
+  pointer-events: all;
 }
 
 .footer.navPaneOpen {
@@ -135,8 +142,62 @@
   transform: translateX(100%);
 }
 
+.defaultOverlay {
+  background-color: transparent !important;
+  overflow: auto;
+}
+
+.incDefaultOverlay {
+  /* pointer-events: none; */
+  height: fit-content;
+  overflow-y: none;
+}
+
+.paneOverlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0; /* Ensure the overlay is above other content */
+  pointer-events: none; /* Allow clicks to pass through when opacity is 0 */
+}
+.imgOverlay {
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.imgOverlay::before {
+  position: fixed;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 15%);
+}
+
+.imgOverlay img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.imgOverlay p {
+  height: 100vh;
+  color: #a3a3a3;
+  text-align: center;
+  margin-top: 20px;
+}
+
 .slidingPane {
   height: fit-content;
+  min-height: calc(100vh - 65px);
   position: relative;
   background: var(--light);
   padding: 0 0 35px 0;
@@ -145,6 +206,15 @@
   box-shadow: none !important;
   font-size: 13px;
   pointer-events: all;
+}
+
+.imgPane {
+  position: sticky;
+  margin-top: 250px;
+  min-height: calc(100vh - 250px);
+  border-radius: 40px 40px 0 0;
+  /* overflow-y: auto; */
+  /* pointer-events: none; */
 }
 
 .infoClose.slidingPane {
@@ -156,8 +226,12 @@
   overflow-x: hidden;
 }
 
+/* #root {
+  overflow: hidden;
+} */
+
 .slidingPane h1 {
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 500;
   letter-spacing: 1.28px;
   text-align: center;
@@ -178,6 +252,8 @@
   display: flex;
   align-items: center;
   padding: 10px;
+  opacity: 1;
+  z-index: 20;
 }
 
 .infoPaneBackButton svg {
