--- a/client/src/components/PaneInfoPiece.module.css
+++ b/client/src/components/PaneInfoPiece.module.css
@@ -20,10 +20,10 @@
 
 /* -------------------- APP STYLES --------------------  */
 
-.mobile.infoPiece .infoName {
-  font-size: 14px;
+/* .mobile.infoPiece .infoName {
+  font-size: 12px;
 }
 
 .mobile.infoPiece .infoValue {
-  font-size: 15px;
-}
+  font-size: 13px;
+} */
