--- a/client/src/components/Duration.module.css
+++ b/client/src/components/Duration.module.css
@@ -85,9 +85,11 @@
 .mobile .hours,
 .mobile .minutes,
 .mobile .seconds {
-  font-size: 13px;
+  /* font-size: 13px; */
+  font-size: 12px;
 }
 
 .mobile.small .number {
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 13px;
 }
