--- a/client/src/pages/TimelineSessions.module.css
+++ b/client/src/pages/TimelineSessions.module.css
@@ -69,6 +69,17 @@
 
 /* -------------------- APP STYLES --------------------  */
 
+.mobile .row {
+  height: fit-content;
+  padding: 10px 0;
+}
+
+.mobile td,
+.mobile th {
+  height: fit-content;
+  padding: 12px 0;
+}
+
 .mobile .tableHeader .row th {
   font-weight: 500;
 }
