--- a/client/src/components/Button.module.css
+++ b/client/src/components/Button.module.css
@@ -12,15 +12,15 @@
 /* SIZES */
 
 .medium {
-  /* height: 50px; */
+  height: 50px;
 }
 
 .large {
-  /* height: 55px; */
+  height: 55px;
 }
 
 .large.icon {
-  /* padding: 0 30px; */
+  padding: 0 30px;
 }
 
 .small {
